# c104

./: README.md
ALPS-BE/: Dockerfile  docker-compose.yml
ALPS-BE/app/: Cargo.toml
ALPS-BE/app/src/: main.rs
ALPS-CD/: index.html  package-lock.json  package.json  vite.config.js
ALPS-CD/design/: background.ai
ALPS-CD/src/: App.vue  main.js
ALPS-CD/src/assets/: main.css
ALPS-FE/app/: build.gradle
ALPS-FE/app/src/main/: AndroidManifest.xml
ALPS-FE/app/src/main/java/jp/arkw/alps/fe/: MainActivity.java
ALPS-FE/app/src/main/res/layout/: activity_main.xml  activity_purchase.xml
ALPS-FE/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
ALPS-FE/design/: card.ai  receipt.ai
ALPS-FE/design/category/: book.ai
