[package]
name = "ALPS-BE"
version = "104.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
chrono = "0.4"
rusqlite = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3.36"
